📝 Fix README.md - remove docs references and update file structure

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ GITHUB_PAGES_DEPLOYMENT.md
 DEPLOYMENT_SECURITY_GUIDE.md
 GITIGNORE_USAGE_GUIDE.md
 STEP_BY_STEP_DEPLOYMENT.md
+CLEANUP_COMMANDS.md
 PROJECT_*.md
 CSS_OPTIMIZATION_PLAN.md
 DEVELOPMENT_HISTORY.md
